# rcbl-ntfr

./: .gitmodules  README.md  docker-compose.yml
docs/: agentic-receivable-system.md  ai-functional-spec.md  architecture.md  data-model.md  development-plan.md  functional-spec.md  idea.md  prd.md
rcbl-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  ruff.toml
rcbl-backend/src/: config.py  main.py  worker.py
rcbl-backend/src/clients/: ocr_client.py  s3_client.py
rcbl-backend/src/core/: crypto.py  deps.py  exceptions.py  observability.py  rate_limit.py  security.py  tenant.py
rcbl-backend/src/db/: session.py
rcbl-backend/src/modules/auth/: models.py  repository.py  router.py  schemas.py  service.py
rcbl-backend/src/modules/health/: router.py
rcbl-backend/src/modules/invoices/: jobs.py  models.py  repository.py  router.py  schemas.py  service.py
rcbl-backend/tests/: conftest.py  test_auth.py  test_error_codes.py  test_health.py  test_invoices.py  test_isolation.py  test_jobs.py
rcbl-data-migration/: .env.example  README.md  flyway.toml
rcbl-data-migration/migrations/: V001__create_extensions.sql  V002__create_companies.sql  V003__create_users.sql  V004__create_customers.sql  V005__create_invoices.sql  V006__create_payments.sql  V007__create_reminder_events.sql  V008__create_reminder_sequences.sql  V009__create_email_templates.sql  V010__create_invoice_upload_batches.sql  V011__create_invoice_upload_items.sql  V012__add_invoice_upload_item_fk.sql  V013__create_csv_import_profiles.sql  V014__create_accounting_integrations.sql  (+20 more)
